// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stake Snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-dkPtRN lmksLl"
    >
      <div
        class="sc-furwcr HBVij"
        style="opacity: 1;"
      >
        <div
          class="ant-radio-group ant-radio-group-outline"
          style="margin-bottom: 12px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="-1"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <span
                    style="margin-left: 12px;"
                  >
                    New position
                  </span>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              )
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="2"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        2
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="4"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        4
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="6"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        6
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="height: 40px;"
        >
          <div
            class="sc-gsDKAQ gWFfas"
          >
            <button
              aria-checked="false"
              class="ant-switch"
              role="switch"
              type="button"
            >
              <div
                class="ant-switch-handle"
              />
              <span
                class="ant-switch-inner"
              />
            </button>
            <div
              class="sc-bdvvtL dVMppL"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
            <span
              style="font-size: 0.8em;"
            >
              Incognito Staking:
              <br />
              If this is ON, your staking will be hidden from the public.
            </span>
          </div>
        </div>
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg sc-eCImPb gIEWvk"
        >
          <input
            class="ant-input ant-input-lg"
            id="stake"
            type="number"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <button
              class="sc-hKwDye kpA-dVf"
            >
              DEV
            </button>
          </span>
        </span>
        <div
          class="sc-gKclnd gmKoQx"
        >
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-11"
            >
              <button
                class="ant-btn ant-btn-primary sc-jRQBWg cyMfUM"
                type="button"
              >
                <span>
                  Approve
                </span>
              </button>
            </div>
            <div
              class="ant-col ant-col-2 sc-iCfMLu gcqWPX"
            >
              →
            </div>
            <div
              class="ant-col ant-col-11"
            >
              <button
                class="ant-btn ant-btn-primary sc-jRQBWg cyMfUM"
                disabled=""
                type="button"
              >
                <span>
                  Stake
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 40px;"
      />
    </div>
  </div>
  <div>
    <div
      class="ant-message"
    >
      <div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-message"
    >
      <div />
    </div>
  </div>
</body>
`;

exports[`Stake Snapshot with title 1`] = `
<body>
  <div>
    <div
      class="ant-message"
    >
      <div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-message-notice"
        >
          <div
            class="ant-message-notice-content"
          >
            <div
              class="ant-message-custom-content ant-message-error"
            >
              <span
                aria-label="close-circle"
                class="anticon anticon-close-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                  />
                </svg>
              </span>
              <span>
                fetch is not defined
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-message"
    >
      <div />
    </div>
  </div>
  <div>
    <div
      class="sc-dkPtRN lmksLl"
    >
      <label
        for="stake"
      >
        Stake
      </label>
      <div
        class="sc-furwcr HBVij"
        style="opacity: 1;"
      >
        <div
          class="ant-radio-group ant-radio-group-outline"
          style="margin-bottom: 12px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="-1"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <span
                    style="margin-left: 12px;"
                  >
                    New position
                  </span>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              )
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="2"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        2
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="4"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        4
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
            <div
              class="ant-space-item"
            >
              <label
                class="ant-radio-wrapper"
              >
                <span
                  class="ant-radio"
                >
                  <input
                    class="ant-radio-input"
                    type="radio"
                    value="6"
                  />
                  <span
                    class="ant-radio-inner"
                  />
                </span>
                <span>
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="margin-left: 8px; min-width: 40px;"
                      >
                        #
                        6
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 24px;"
                    >
                      <div
                        style="min-width: 120px;"
                      >
                        <span>
                          0.000000000000001
                        </span>
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Staked
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div>
                        0
                        <span
                          style="font-size: 0.6em; margin-left: 2px;"
                        >
                          Claimable
                        </span>
                      </div>
                    </div>
                  </div>
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="height: 40px;"
        >
          <div
            class="sc-gsDKAQ gWFfas"
          >
            <button
              aria-checked="false"
              class="ant-switch"
              role="switch"
              type="button"
            >
              <div
                class="ant-switch-handle"
              />
              <span
                class="ant-switch-inner"
              />
            </button>
            <div
              class="sc-bdvvtL dVMppL"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
            <span
              style="font-size: 0.8em;"
            >
              Incognito Staking:
              <br />
              If this is ON, your staking will be hidden from the public.
            </span>
          </div>
        </div>
        <span
          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg sc-eCImPb gIEWvk"
        >
          <input
            class="ant-input ant-input-lg"
            id="stake"
            type="number"
            value=""
          />
          <span
            class="ant-input-suffix"
          >
            <button
              class="sc-hKwDye kpA-dVf"
            >
              DEV
            </button>
          </span>
        </span>
        <div
          class="sc-gKclnd gmKoQx"
        >
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-11"
            >
              <button
                class="ant-btn ant-btn-primary sc-jRQBWg cyMfUM"
                type="button"
              >
                <span>
                  Approve
                </span>
              </button>
            </div>
            <div
              class="ant-col ant-col-2 sc-iCfMLu gcqWPX"
            >
              →
            </div>
            <div
              class="ant-col ant-col-11"
            >
              <button
                class="ant-btn ant-btn-primary sc-jRQBWg cyMfUM"
                disabled=""
                type="button"
              >
                <span>
                  Stake
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 40px;"
      />
    </div>
  </div>
</body>
`;
